# pythonsrc

./: .gitignore  CMakeLists.txt
pycpp/: CMakeLists.txt  test1.cpp
python3/: CMakeLists.txt  Makefile  Makefile.pre  config.status  pyconfig.h  python-config.py
python3/Misc/: python-config.sh  python.pc
python3/Modules/: ld_so_aix
python3/Python/: dynload_shlib.c
